# GandalfWhite

./: AboutDialog.qml  CMakeLists.txt  GandalfWhite.qrc  Main.qml  SettingsDialog.qml  backendclient.cpp  backendclient.h  main.cpp  version.h.in
